[package]
name = "hello-pb"
version = "0.1.7"
edition = "2024"

[dependencies]
tonic = "0.14.6"
prost = "0.14.4"
tonic-prost = "0.14.6"
serde = { version = "1.0.229", features = ["derive"] }
async-trait = "0.1.91"

[build-dependencies]
# note: Must be the same as the tonic version
tonic-prost-build = "0.14.6"
